[package]
name = "ellp"
version = "0.1.1"
authors = ["Kurt Ehlert <kwehlert@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/ellp/"
description = "Linear programming library that provides primal and dual simplex solvers."
repository = "https://github.com/kehlert/ellp"
keywords = ["linear", "programming", "optimization", "simplex", "solver"]
categories = ["mathematics", "science"]

[dependencies]
log = "^0"
nalgebra = "^0"
thiserror = "^1"

[dev-dependencies]
chrono = "^0"
fern = {version = "^0", features = ["colored"]}
paste = "^1"
